fixed alignement of send button

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ body {
   /* min-height: 55%;  */
   position: absolute;
   max-height: 100%;
-  background-color: blue;
+  /* background-color: blue; */
 }
 
 #chatDiv::-webkit-scrollbar-track
